--- a/Level 2/index.css
+++ b/Level 2/index.css
@@ -31,5 +31,10 @@
 
 /* background-image */
 #text{
+    height: 200px;
+    width:200px;
+    background-color:red;
+    background-image:url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixlok.com%2Fimages%2Fmyntra-logo-png-image-free-download%2F&psig=AOvVaw28FiVMqDy5nslGV6MXo_2T&ust=1700755886518000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJDdm8b_14IDFQAAAAAdAAAAABAE);
     
+    background-size: contain;
 }
