--- a/Level 2/index.css
+++ b/Level 2/index.css
@@ -41,7 +41,7 @@
 } */
 
 /* visibility */
-#one{
+/* #one{
    
     background-color: red;
     height: 200px;
@@ -53,4 +53,11 @@
     background-color: rgb(154, 195, 179);
     height: 200px;
     width: 200px;
-}
+} */
+
+/* shothead */
+/* #one{
+    height: 200px;
+    width:200px;
+    background: green url(logo.png) no-repeat none center; this s
+} */
