--- a/Level 7/Animation/index.css
+++ b/Level 7/Animation/index.css
@@ -3,12 +3,13 @@
     width:100px;
     background-color: red;
     position: relative;
-    animation-name: animation;
+    /* animation-name: animation;
     animation-duration: 4s;
     animation-timing-function:ease-in-out;
     animation-delay: 0s;
     animation-iteration-count: infinite;
-    animation-direction: alternate;
+    animation-direction: alternate; */
+    animation: animation 4s ease-in-out 1s infinite alternate-reverse ;
 }
 
 @keyframes animation {
