--- a/Final Project/index.css
+++ b/Final Project/index.css
@@ -5,11 +5,12 @@
     font-family: 'assistant',sans-serif;
 }
 header{
-    background-color:rgb(154, 137, 137);
+    background-color:rgb(255, 255, 255);
     justify-content: space-between;
     height: 80px;
     display: flex;
     align-items: center;
+    box-shadow: 0 0px 10px rgba(12, 12, 12, 0.1);
 }
 .logo-container{
     margin-left: 4%;
@@ -29,6 +30,15 @@ header{
     font-weight: 700;
     color:#282c3f ;
     letter-spacing: .3px;
+    border-bottom: 3px solid #ffff;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.nav-bar a:hover{
+    border-bottom: 3px solid #f42c54;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .nav-bar{
@@ -46,7 +56,8 @@ header{
 .search-bar{
     display: flex;
     height: 40px;
-    min-width:320px;
+    min-width:200px;
+    width: 30%;
     align-items: center;
 }
 
@@ -67,5 +78,82 @@ header{
   height: 100%;
   border: none;
   border-radius: 0 4px 4px 0;
+  outline: none;
 
+}
+
+.action-bar{
+    display: flex;
+    min-width: 200px;
+    justify-content: space-evenly;
+}
+
+.action-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.action_name{
+    font-family:'assistant',sans-serif;
+    font-weight: 700;
+}
+
+/* main section */
+.banner-image{
+    width: 100%;
+    /* width: 100vw; */
+}
+
+.banner-container{
+    margin-top: 40px;
+}
+
+.category-heading{
+    text-transform: uppercase;
+    color: #3e4152;
+    font-weight: 700;
+    font-size: 1.8em;
+    margin: 50px 0 10px 30px;
+    letter-spacing: .15em;
+    max-height: 5em;
+}
+.category-item{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 30px 0 30px 0;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.sale-item{
+  width: 12.7em;
+}
+
+.footer-column a{
+    color: #282c3f;
+    font-weight:700;
+    font-size: small;
+    text-decoration:none ;
+    margin-bottom:15px;
+}
+
+.footer-column a{
+    text-decoration: none;
+    color: #696b79;
+}
+
+.footer-column{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-container{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.copy-right{
+    color:#94969f;
+    padding: 20px;
+    text-align: center;
 }
